packages/fuselage/src/components/Sidebar/styles.scss
@use '../../styles/colors.scss';
@use '../../styles/lengths.scss';
@use '../../styles/typography.scss';
@import '../../styles/mixins/all.scss';

$sidebar-header-height: theme(
  'sidebar-header-height',
  theme('header-height', lengths.size(64))
);
$sidebar-item-background-color: theme(
  'sidebar-item-background-color',
  colors.surface()
);
$sidebar-item-color: theme('sidebar-item-color', colors.foreground('hint'));
$sidebar-item-color-highlighted: theme(
  'sidebar-item-color-highlighted',
  colors.foreground('alternative')
);
$sidebar-item-background-color-hover: theme(
  'sidebar-item-background-color-hover',
  colors.neutral(800)
);
$sidebar-item-color-hover: theme(
  'sidebar-item-color-hover',
  colors.foreground('hint')
);
$sidebar-item-color-focus: theme(
  'sidebar-item-color-focus',
  colors.neutral(900)
);
$sidebar-item-background-color-selected: theme(
  'sidebar-item-background-color-selected',
  colors.neutral(200)
);
$sidebar-item-color-selected: theme(
  'sidebar-item-color-selected',
  colors.foreground('hint')
);

%sidebar-base {
  display: flex;

  overflow: hidden;
  align-items: center;

  border-radius: lengths.border-radius(2);
  @include typography.use-font-scale(p1);
}

%highlighted {
  @include typography.use-font-scale(p2);
  color: $sidebar-item-color-highlighted;
}

@mixin highlighted {
  &--highlighted {
    @extend %highlighted;
  }
}

.rcx-sidebar {
  &-topbar {
    display: flex;
    flex-direction: column;

    height: $sidebar-header-height;

    color: $sidebar-item-color;

    &--section {
      padding-block-start: lengths.padding(4);
    }

    &__wrapper {
      display: flex;
      justify-content: space-between;
      align-items: center;

      flex-grow: 1;

      padding-block: lengths.padding(16);
      padding-inline: lengths.padding(16);
    }

    &__title {
      @include typography.use-font-scale(p2);

      color: colors.neutral(900);
    }
  }

  &-item {
    @extend %sidebar-base;
    padding-block: lengths.padding(4);
    padding-inline: lengths.padding(16);

    color: $sidebar-item-color;

    @include highlighted;

    &__wrapper {
      @extend %sidebar-base;
      @include typography.use-with-truncated-text();
      flex: 1 0 100%;

      margin-inline: lengths.margin(-2);
    }

    &--clickable {
      @include clickable;

      @include on-focus-visible {
        color: $sidebar-item-color-hover;
        background-color: $sidebar-item-background-color-hover;
      }

      @include on-hover {
        @include use-no-shadow;
        color: $sidebar-item-color-hover;
        background-color: $sidebar-item-background-color-hover;
      }

      @include on-focus-visible {
        @include use-focus-shadow-inset($sidebar-item-color-focus);
      }
    }

    &:active,
    &--selected {
      color: $sidebar-item-color-selected;
      background-color: $sidebar-item-background-color-selected;
    }

    &__avatar {
      flex: 0 0 auto;

      margin-inline: lengths.margin(2);
      @include typography.use-with-truncated-text();
    }

    &__container {
      @extend %sidebar-base;
      flex: 0 0 auto;

      margin-inline: lengths.margin(2);
    }

    &__icon {
      @include typography.use-with-truncated-text();
      display: flex;
      justify-content: center;

      width: lengths.size(12);
      margin-inline: lengths.margin(4);
    }

    &__content {
      @include typography.use-with-truncated-text();
      flex-wrap: wrap;
      flex: 1 1 100%;
    }

    &__title,
    &__subtitle {
      @extend %sidebar-base;
      @include typography.use-with-truncated-text();
      display: block;
      flex: 1 1 1%;

      margin-inline: lengths.margin(4);
    }

    &__subtitle {
      @include typography.use-font-scale(c1);
    }

    &__time {
      @include typography.use-font-scale(micro);
      margin-inline: lengths.margin(4);
    }

    &__badge {
      margin-inline: lengths.margin(4);
    }

    &:hover &__menu-wraper,
    &.focus-within &__menu-wraper {
      width: lengths.size(20);

      margin-inline: lengths.margin(4);

      opacity: 1;
    }

    &:focus-within &__menu-wraper {
      width: lengths.size(20);

      margin-inline: lengths.margin(4);

      opacity: 1;
    }

    &__menu {
      position: absolute;

      transform: translateY(-50%);
    }

    &__menu-wraper {
      flex-shrink: 0;

      width: 0;

      height: 100%;

      opacity: 0;
    }
  }

  &-title {
    @include typography.use-font-scale(c2);
    @include typography.use-with-truncated-text();
    padding-block: lengths.padding(12);
    padding-inline: lengths.padding(16);

    color: colors.foreground(hint);
  }
}

